tests/snapshots/options__opt_header_reverse.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
">                                                                               "
"  3/3                                                                        0/0"
"  test_header                                                                   "
"> a                                                                             "
"  b                                                                             "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (2, 0)
