tests/snapshots/options__opt_header_reverse_inline_info@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --header test_header --reverse --inline-info"
---
">   < 3/3                                                                    0/0"
"  test_header                                                                   "
"> a                                                                             "
"  b                                                                             "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (1, 3)
