tests/snapshots/options__opt_hide_nth_hscroll@001.snap
---
source: tests/options.rs
description: "input: items [&format!(\"{} target\", [\"a\"; 1000].join(\"\"))]\noptions: --delimiter   --hide-nth 1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> target                                                                        "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
